tests/NormalTests/paczka2/big_fuzzy/36814670.err
Error in line 13: HimOI A279 77,9
Error in line 24: wX1VKlf S705 28,0
Error in line 31: 5EcuZ A279 91,7
Error in line 47: HimOI S999 36,7
Error in line 35: PXIj S999 91,2
Error in line 48: wX1VKlf A391 99,3
Error in line 64: oNGgrpcfVCA S999 14,8
Error in line 73: oNGgrpcfVCA A279 298,5
Error in line 65: HimOI A391 192,1
Error in line 63: 5EcuZ S999 204,2
Error in line 83: PXIj A391 88,2
Error in line 85: 5EcuZ S999 63,4
Error in line 90: S999 A391 92,6
Error in line 109: HimOI S999 90,4
Error in line 110: HimOI S705 55,8
Error in line 123: S999 S705 56,6
Error in line 128: S999 S999 43,5
Error in line 134: wX1VKlf S999 171,3
Error in line 131: oNGgrpcfVCA S705 33,1
Error in line 130: S999 S705 65,2
Error in line 142: S999 A391 66,3
Error in line 136: wX1VKlf A279 26,8
Error in line 146: S999 S705 72,6
Error in line 153: oNGgrpcfVCA S999 17,1
Error in line 151: wX1VKlf S999 25,2
Error in line 159: S999 S999 0,4
Error in line 169: PXIj A391 17,9
Error in line 178: oNGgrpcfVCA S999 52,1
Error in line 180: oNGgrpcfVCA S705 36,1
Error in line 182: oNGgrpcfVCA S999 41,9
Error in line 171: HimOI S705 20,5
Error in line 202: S999 S705 31,3
Error in line 218: wX1VKlf S999 32,7
Error in line 220: 5EcuZ A391 10,7
Error in line 236: wX1VKlf S999 36,4
Error in line 244: PXIj S999 313,20
Error in line 242: PXIj S999 631,1
Error in line 243: 8vV S999 24,7
